# imageService

./: .gitignore  Dockerfile  db.py  docker-compose.yml  image_processing.py  main.py  main_view.py  prospector.yaml  pyproject.toml  receive_return.py  requirements.txt  resize.py  upload.py
client/: Dockerfile  pyproject.toml  receive_return.py  requirements.txt
server/: Dockerfile  image_processing.py  pyproject.toml  requirements.txt
templates/: index.html  return_image.html
