[tool.poetry]
name = "poetry_client"
version = "0.1.0"
description = ""
authors = ["rigsbey <ab.kam@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncio = "^3.4.3"
aio_pika = "^6.7.0"
gino = "^1.0.1"
sanic = "^20.6.3"
sanic_jinja2 = "^0.8.0"
sanic_openapi = "^0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
