[tool.poetry]
name = "poetry_server"
version = "0.1.0"
description = ""
authors = ["rigsbey <ab.kam@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
aio_pika = "^6.7.0"
pillow = "^7.2.0"
asyncio = "^3.4.3"
uuid = "^1.30"
gino = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
